--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Печатные платы. Производство и монтаж, поставка комплектующих, блоков и модулей">
+  <meta name="keywords" content="печатные платы, производство печатных плат, монтаж печатных плат">
   <title>Smart Device</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -14,7 +16,7 @@
     <div class="top-background">
       <header class="page-header">
         <div class="page-header__wrapper">
-          <a href="" class="page-header__logo">
+          <a class="page-header__logo">
             <picture>
               <source media="(max-width: 767px)" srcset="img/logo-no-text.svg">
               <img class="page-header__logo-image" src="img/logo-text-header.svg" width="202" height="52"
@@ -25,14 +27,14 @@
             <ul class="contacts__list">
               <li class="contacts__item">
                 <a class="contacts__link contacts__link--email" href="mailto:info@sd.ru">
-                  <svg role="img" width="19" height="14" viewbox="0 0 19 14">
+                  <svg role="img" width="19" height="14" viewbox="0 0 19 14" aria-label="Почта">
                     <use xlink:href="img/sprite_auto.svg#icon-mail"></use>
                   </svg>
                   info@sd.ru</a>
               </li>
               <li class="contacts__item">
-                <a class="contacts__link contacts__link--phone" href="callto:+74950005252">
-                  <svg role="img" width="18" height="18" viewbox="0 0 18 18">
+                <a class="contacts__link contacts__link--phone" href="tel:+74950005252">
+                  <svg role="img" width="18" height="18" viewbox="0 0 18 18" aria-label="Телефон">
                     <use xlink:href="img/sprite_auto.svg#icon-phone"></use>
                   </svg>
                   +7 (495) 000 52 52</a>
@@ -46,7 +48,7 @@
         <div class="promo__wrapper">
           <h1 class="promo__title">Печатные платы</h1>
           <p class="promo__text">производство и монтаж, поставка комплектующих, блоков и модулей</p>
-          <a href="#" class="promo__link button button--big">Получить бесплатную консультацию</a>
+          <a href="#callback" class="promo__link button button--big">Получить бесплатную консультацию</a>
           <picture>
             <source type="image/webp" media="(max-width: 767px)"
               srcset="img/boards-mobile.webp 1x, img/boards-mobile-2x.webp 2x">
@@ -58,20 +60,21 @@
             <img class="promo__image" src="img/boards-desktop.png" srcset="img/boards-desktop-2x.png 2x" width="705"
               height="515" alt="Печатные платы">
           </picture>
-          <a href="" class="promo__scroll-link">Скролл вниз</a>
+          <a href="#advantages" class="promo__scroll-link">Скролл вниз</a>
         </div>
       </section>
     </div>
     <div class="middle-background">
-      <section class="advantages">
+      <section class="advantages" id="advantages">
         <div class="advantages__wrapper">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantages__list">
             <li class="advantages__container">
               <div class="advantages__item">
                 <div class="advantages__image-container">
-                  <svg class="advantages__image--stopwatch" role="img" width="29" height="35" viewbox="0 0 29 35">
-                    <use xlink:href="img/sprite_auto.svg#icon-stopwatch"></use>
+                  <svg class="advantages__image advantages__image--stopwatch" role="img" width="29" height="35"
+                    viewbox="0 0 29 35">
+                    <use xlink:href="img/sprite_auto.svg#icon-stopwatch" aria-label="Часы"></use>
                   </svg>
                 </div>
                 <h3>Оперативные сроки</h3>
@@ -82,21 +85,21 @@
             </li>
             <li class="advantages__container">
               <div class="advantages__item">
-                <div class="advantages__image-container"><svg class="advantages__image--hired" role="img" width="35"
-                    height="35" viewbox="0 0 35 35">
+                <div class="advantages__image-container"><svg class="advantages__image advantages__image--hired"
+                    role="img" width="35" height="35" viewbox="0 0 35 35" aria-label="Поставщики">
                     <use xlink:href="img/sprite_auto.svg#icon-hired"></use>
                   </svg>
                 </div>
                 <h3>Крупные поставщики</h3>
-                <p class="advantages--marginfix">Нашими поставщиками являются такие крупные мировые компании как: OSRAM,
+                <p class="advantages__marginfix">Нашими поставщиками являются такие крупные мировые компании как: OSRAM,
                   CREE, HOLGLITRONIC, REFOND.
                   Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.</p>
               </div>
             </li>
             <li class="advantages__container">
               <div class="advantages__item">
-                <div class="advantages__image-container"><svg class="advantages__image--detective" role="img" width="36"
-                    height="31" viewbox="0 0 36 31">
+                <div class="advantages__image-container"><svg class="advantages__image advantages__image--detective"
+                    role="img" width="36" height="31" viewbox="0 0 36 31" aria-label="Детектив">
                     <use xlink:href="img/sprite_auto.svg#icon-detective"></use>
                   </svg>
                 </div>
@@ -106,9 +109,9 @@
             </li>
             <li class="advantages__container">
               <div class="advantages__item">
-                <div class="advantages__image-container"><svg class="advantages__image--tag" role="img" width="35"
-                    height="35" viewbox="0 0 35 35">
-                    <use xlink:href="img/sprite_auto.svg#icon-tag"></use>
+                <div class="advantages__image-container"><svg class="advantages__image advantages__image--tag"
+                    role="img" width="35" height="35" viewbox="0 0 35 35">
+                    <use xlink:href="img/sprite_auto.svg#icon-tag" aria-label="Ценник"></use>
                   </svg>
                 </div>
                 <h3>Персонализация стоимости</h3>
@@ -172,7 +175,7 @@
         </ul>
       </div>
     </section>
-    <section class="callback">
+    <section class="callback" id="callback">
       <div class="callback__wrapper">
         <div class="callback__img-container">
           <picture>
@@ -186,18 +189,20 @@
           <p>Мы проконсультируем Вас бесплатно</p>
           <form action="#" class="callback__form" method="post">
             <div class="callback__row">
-              <label class="callback__label callback__label--txt">
-                <input type="text" name="name" placeholder="Имя" required>
+              <label for="name" class="callback__label callback__label--txt">
+                <input type="text" name="name" id="name" placeholder="Имя" required>
               </label>
-              <label class="callback__label  callback__label--tel">
-                <input type="tel" name="tel" placeholder="Телефон" required>
+              <label for="tel" class="callback__label  callback__label--tel">
+                <input type="tel" name="tel" id="tel" placeholder="Телефон" pattern="\+7\(\d{3}\)\d{7}" maxlength="14"
+                  required>
               </label>
             </div>
-            <textarea class="callback__textarea" name="question" cols="30" rows="4" placeholder="Ваш вопрос"></textarea>
+            <textarea class="callback__textarea" name="question" cols="30" rows="4" placeholder="Ваш вопрос"
+              required></textarea>
             <div class="callback__row">
               <button class="callback__btn button" type="submit">Задать вопрос</button>
-              <label class="callback__label callback__label--chbx" role="checkbox" tabindex="0">
-                <input type="checkbox" name="agreement" required>
+              <label class="callback__label callback__label--chbx" tabindex="0">
+                <input class="visually-hidden" type="checkbox" name="agreement" required>
                 <span>Я согласен на обработку персональных данных</span>
               </label>
             </div>
@@ -217,7 +222,7 @@
           <ul class="page-footer__social">
             <li class="page-footer__social-item">
               <a class="link" href="http://facebook.com">
-                <svg role="img" width="27" height="27" viewbox="0 0 27 27">
+                <svg role="img" width="27" height="27" viewbox="0 0 27 27" aria-label="Facebook">
                   <use xlink:href="img/sprite_auto.svg#icon-fb"></use>
                 </svg>
                 Ссылка на Facebook
@@ -225,7 +230,7 @@
             </li>
             <li class="page-footer__social-item">
               <a href="http://ok.ru">
-                <svg role="img" width="27" height="26" viewbox="0 0 27 26">
+                <svg role="img" width="27" height="26" viewbox="0 0 27 26" aria-label="Одноклассники">
                   <use xlink:href="img/sprite_auto.svg#icon-ok"></use>
                 </svg>
                 Ссылка в Односклассники
@@ -234,7 +239,7 @@
             <li class="page-footer__social-item">
               <a href="http://vk.com">
                 <svg role="img" width="27" height="26" viewbox="0 0 27 26">
-                  <use xlink:href="img/sprite_auto.svg#icon-vk"></use>
+                  <use xlink:href="img/sprite_auto.svg#icon-vk" aria-label="ВКонтакте"></use>
                 </svg>
                 Ссылка во Вконтакте
               </a>
@@ -260,13 +265,13 @@
           <ul class="page-footer__list">
             <li>г. Мытищи, Олимпийский проспект, д.10</li>
             <li>
-              <a href="callto:+74955894050">+7 (495) 589-40-50</a>
+              <a href="tel:+74955894050">+7 (495) 589-40-50</a>
             </li>
             <li>
-              <a href="callto:+79250038767">+7 (925) 003-87-67</a>
+              <a href="tel:+79250038767">+7 (925) 003-87-67</a>
             </li>
             <li>
-              <a href="callto:+792692608079">+7 (926) 926-080-79</a>
+              <a href="tel:+792692608079">+7 (926) 926-080-79</a>
             </li>
           </ul>
         </div>
@@ -281,6 +286,29 @@
       </div>
     </div>
   </footer>
+  .
+  <section class="popup visually-hidden">
+    <div class="popup__window">
+      <button class="popup__btn" type="button">Закрыть окно</button>
+      <h2>Закажите звонок</h2>
+      <p>Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
+      <form action="#" class="popup__form">
+        <label for="popup-name">
+          <input type="text" name="name" id="popup-name" placeholder="Имя" required>
+        </label>
+        <label for="popup-tel">
+          <input type="tel" name="tel" id="popup-tel" placeholder="Телефон" pattern="\+7\(\d{3}\)\d{7}" maxlength="14"
+            required>
+        </label>
+        <textarea name="question" cols="30" rows="4" placeholder="Ваш вопрос" required></textarea>
+        <button class="popup__submit button" type="submit">Отправить</button>
+        <label class="popup__agreement" tabindex="0">
+          <input class="visually-hidden" type="checkbox" name="agreement" required>
+          <span>Я согласен на обработку персональных данных</span>
+        </label>
+      </form>
+    </div>
+  </section>
   <script src="js/script.js"></script>
 </body>
 
