--- a/source/index.html
+++ b/source/index.html
@@ -16,37 +16,37 @@
 </head>
 
 <body>
-  <header class="page-header">
-    <div class="page-header__wrapper">
-      <a href="#" class="page-header__logo">
-        <picture>
-          <source media="(max-width: 767px)" srcset="img/logo-no-text.svg">
-          <img class="page-header__logo-image" src="img/logo-text-header.svg" width="202" height="52"
-            alt="Smart Device">
-        </picture>
-      </a>
-      <div class="page-header__contacts contacts">
-        <ul class="contacts__list">
-          <li class="contacts__item">
-            <a class="contacts__link contacts__link--email" href="mailto:info@sd.ru">
-              <svg role="img" width="19" height="14" viewbox="0 0 19 14" aria-label="Почта">
-                <use xlink:href="img/sprite_auto.svg#icon-mail"></use>
-              </svg>
-              info@sd.ru</a>
-          </li>
-          <li class="contacts__item">
-            <a class="contacts__link contacts__link--phone" href="tel:+74950005252">
-              <svg role="img" width="18" height="18" viewbox="0 0 18 18" aria-label="Телефон">
-                <use xlink:href="img/sprite_auto.svg#icon-phone"></use>
-              </svg>
-              +7 (495) 000 52 52</a>
-          </li>
-        </ul>
-        <button class="contacts__btn button" type="button">Заказать звонок</button>
+  <div class="top-background">
+    <header class="page-header">
+      <div class="page-header__wrapper">
+        <a href="#" class="page-header__logo">
+          <picture>
+            <source media="(max-width: 767px)" srcset="img/logo-no-text.svg">
+            <img class="page-header__logo-image" src="img/logo-text-header.svg" width="202" height="52"
+              alt="Smart Device">
+          </picture>
+        </a>
+        <div class="page-header__contacts contacts">
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <a class="contacts__link contacts__link--email" href="mailto:info@sd.ru">
+                <svg role="img" width="19" height="14" viewbox="0 0 19 14" aria-label="Почта">
+                  <use xlink:href="img/sprite_auto.svg#icon-mail"></use>
+                </svg>
+                info@sd.ru</a>
+            </li>
+            <li class="contacts__item">
+              <a class="contacts__link contacts__link--phone" href="tel:+74950005252">
+                <svg role="img" width="18" height="18" viewbox="0 0 18 18" aria-label="Телефон">
+                  <use xlink:href="img/sprite_auto.svg#icon-phone"></use>
+                </svg>
+                +7 (495) 000 52 52</a>
+            </li>
+          </ul>
+          <button class="contacts__btn button" type="button">Заказать звонок</button>
+        </div>
       </div>
-    </div>
-  </header>
-  <main>
+    </header>
     <section class="promo">
       <div class="promo__wrapper">
         <h1 class="promo__title">Печатные платы</h1>
@@ -55,6 +55,8 @@
         <a href="#advantages" class="promo__scroll-link">Скролл вниз</a>
       </div>
     </section>
+  </div>
+  <main>
     <div class="middle-background">
       <section class="advantages" id="advantages">
         <div class="advantages__wrapper">
@@ -139,25 +141,24 @@
     </section>
     <section class="callback" id="callback">
       <div class="callback__wrapper">
-          <form action="#" class="callback__form" method="post">
-            <h2>Остались вопросы? Задайте их нам!</h2>
-            <p>Мы проконсультируем Вас бесплатно</p>
-            <label for="name" class="callback__label callback__label--txt">
-              <input type="text" name="name" id="name" placeholder="Имя" required>
-            </label>
-            <label for="tel" class="callback__label  callback__label--tel">
-              <input type="tel" name="tel" id="tel" placeholder="Телефон" pattern="\+7\(\d{3}\)\d{7}" maxlength="14"
-                required>
-            </label>
-            <textarea class="callback__textarea" name="question" cols="30" rows="4" placeholder="Ваш вопрос"
-              required></textarea>
-            <button class="callback__btn button" type="submit">Задать вопрос</button>
-            <label class="callback__label callback__label--chbx" tabindex="0">
-              <input class="visually-hidden" type="checkbox" name="agreement" required>
-              <span>Я согласен на обработку персональных данных</span>
-            </label>
-          </form>
-        </div>
+        <form action="#" class="callback__form" method="post">
+          <h2>Остались вопросы? Задайте их нам!</h2>
+          <p>Мы проконсультируем Вас бесплатно</p>
+          <label for="name" class="callback__label callback__label--txt">
+            <input type="text" name="name" id="name" placeholder="Имя" required>
+          </label>
+          <label for="tel" class="callback__label  callback__label--tel">
+            <input type="tel" name="tel" id="tel" placeholder="Телефон" pattern="\+7\(\d{3}\)\d{7}" maxlength="14"
+              required>
+          </label>
+          <textarea class="callback__textarea" name="question" cols="30" rows="4" placeholder="Ваш вопрос"
+            required></textarea>
+          <button class="callback__btn button" type="submit">Задать вопрос</button>
+          <input class="visually-hidden" type="checkbox" id="agreement" name="agreement" required>
+          <label class="callback__label callback__label--chbx" for="agreement">Я согласен на обработку персональных
+            данных</label>
+        </form>
+      </div>
     </section>
   </main>
   <footer class="page-footer page-footer--nojs">
@@ -211,16 +212,10 @@
           <h3>Наш офис</h3>
           <button class="page-footer__toggle page-footer__toggle--plus" type="button">Открыть/Закрыть</button>
           <address class="page-footer__list">
-            <p>г. Мытищи, Олимпийский проспект, д.10</p>
-            <p>
-              <a href="tel:+74955894050">+7 (495) 589-40-50</a>
-            </p>
-            <p>
-              <a href="tel:+79250038767">+7 (925) 003-87-67</a>
-            </p>
-            <p>
-              <a href="tel:+792692608079">+7 (926) 926-080-79</a>
-            </p>
+            <span>г. Мытищи, Олимпийский проспект, д.10</span>
+            <a href="tel:+74955894050">+7 (495) 589-40-50</a>
+            <a href="tel:+79250038767">+7 (925) 003-87-67</a>
+            <a href="tel:+792692608079">+7 (926) 926-080-79</a>
           </address>
         </div>
       </div>
@@ -240,18 +235,16 @@
       <p>Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
       <form action="#" class="popup__form" method="post">
         <label for="popup-name">
-          <input type="text" name="name" id="popup-name" placeholder="Имя" required>
+          <input type="text" name="popup-name" id="popup-name" placeholder="Имя" required>
         </label>
         <label for="popup-tel">
-          <input type="tel" name="tel" id="popup-tel" placeholder="Телефон" pattern="\+7\(\d{3}\)\d{7}" maxlength="14"
-            required>
+          <input type="tel" name="popup-tel" id="popup-tel" placeholder="Телефон" pattern="\+7\(\d{3}\)\d{7}"
+            maxlength="14" required>
         </label>
         <textarea name="question" cols="30" rows="4" placeholder="Ваш вопрос" required></textarea>
         <button class="popup__submit button" type="submit">Отправить</button>
-        <label class="popup__agreement" tabindex="0">
-          <input class="visually-hidden" type="checkbox" name="agreement" required>
-          <span>Я согласен на обработку персональных данных</span>
-        </label>
+        <input class="visually-hidden" type="checkbox" name="popup-agreement" id="popup-agreement" required>
+        <label for="popup-agreement" class="popup__agreement">Я согласен на обработку персональных данных</label>
       </form>
     </div>
   </section>
